# wsdd-rust

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.hi.txt  LICENSE.md  LICENSE.txt  MIGRATION.md  NOTICE.md  NOTICE.txt  README.es.md  README.fr.md  README.hi.md  README.md  README.zh.md  REMEDIATION_PLAN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.txt  build.rs  rustfmt.toml  wsdd.manifest
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/project-status/: MIGRATION.md
.github/workflows/: ci.yml  release.yml
docs/: release-validation.md
docs/help/: user-guide.en.md  user-guide.es.md  user-guide.fr.md  user-guide.hi.md  user-guide.zh.md
docs/legal/: LICENSE.es.md  LICENSE.fr.md  LICENSE.hi.md  LICENSE.zh.md
docs/readme/: README.es.md  README.fr.md  README.hi.md  README.zh.md
docs/release/: 1.0.0-draft.md  1.0.0-rc.14-draft.md  1.0.0-rc.15-draft.md  1.0.0-rc.16-draft.md  1.0.0-rc.17-draft.md  1.0.0-rc.18-draft.md
recursos/recursos/COPYRIGHT/: LICENSE.es.txt  LICENSE.fr.txt  LICENSE.hi.txt  LICENSE.txt  LICENSE.zh.txt  about.txt  corto.txt
recursos/recursos/Docker-Structure/: init.yml
recursos/recursos/PS-Script/: dd-detector.ps1  dd-fixmysqlpermission.ps1  dd-isinstalled.ps1  dd-isrunning.ps1  dd-issettingup.ps1  dd-setting.ps1  dd-start.ps1  dd-stop.ps1  wsl-restart.ps1  wsl-start.ps1
src/: app.rs  errors.rs  main.rs
src/app/: channels.rs  container_logs.rs  fonts.rs  jobs.rs  runtime.rs
src/config/: environment.rs
src/handlers/: backup.rs  chocolatey.rs  deploy.rs  docker.rs  docker_deploy.rs  external_app.rs  hosts.rs  log_types.rs  log_viewer.rs  mkcert.rs  mod.rs  output.rs  powershell.rs  project.rs  ps_script.rs  requirements.rs  setting.rs  wsl.rs  xml.rs  yml.rs
src/handlers/backup/: archive.rs  manifest.rs  project_files.rs  runtime.rs  (+1 more)
src/i18n/: mod.rs
src/models/: mod.rs  project.rs
src/resources/: mod.rs
src/ui/: about.rs  add_project.rs  containers_panel.rs  credential_dialogs.rs  display_selector.rs  helps.rs  loader.rs  main_window.rs  mod.rs  modal.rs  projects_panel.rs  settings.rs  state.rs  theme.rs  toolbox_container.rs  toolbox_project.rs  welcome.rs  wsl_settings.rs
tests/: release_validation.rs
wix/: License.rtf  main.wxs
wsdd-launcher/: Cargo.toml  build.rs  wsdd-launcher.manifest
wsdd-launcher/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+59 files in other folders)
