[package]
name = "wsdd"
version = "1.0.0-rc.18"
edition = "2021"
description = "WebStack Deployer for Docker - Rust edition"
authors = ["Walter Nunez / Icaros Net S.A"]
license = "Proprietary"

[[bin]]
name = "wsdd"
path = "src/main.rs"

[dependencies]
# GUI - egui immediate-mode UI framework
eframe = { version = "0.29", features = ["default_fonts"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }
egui_commonmark = { version = "0.18", features = ["better_syntax_highlighting"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling — thiserror para tipos propios, anyhow para recursos/legacy
thiserror = "2"
anyhow = "1"

# Serialización (reemplaza HandlerXML.cs / HandlerYml.cs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }

# Compresión ZIP (para recursos.zip)
zip = "2"

# Observabilidad — reemplaza env_logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Filesystem
walkdir = "2"
tempfile = "3"

# Imagen — decodificación de icono ICO embebido
image = { version = "0.25", default-features = false, features = ["ico"] }

# File dialogs nativos (carpeta, archivo)
rfd = "0.15"

# Windows API (privilegios, UAC)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
zip = "2"
winres = "0.1"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = ["wsdd-launcher", "xtask"]
default-members = [".", "wsdd-launcher"]
